--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "fed-tictactoe-vue-template",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://github.com/Medieinstitutet/vue-tictactoe-Annika-Nyholm/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.2.47"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "gh-pages": "^6.1.1",
     "sass": "^1.77.5",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
